<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Slots::Internal::GeneralSettingsWidget</class>
 <widget class="QWidget" name="Slots::Internal::GeneralSettingsWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="sizeGroupBox">
     <property name="title">
      <string>Size</string>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="layersLabel">
        <property name="text">
         <string>Layers:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="rowsLabel">
        <property name="text">
         <string>Rows:</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="columnsLabel">
        <property name="text">
         <string>Columns:</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QSpinBox" name="layersSpinBox"/>
      </item>
      <item row="1" column="1">
       <widget class="QSpinBox" name="rowsSpinBox"/>
      </item>
      <item row="2" column="1">
       <widget class="QSpinBox" name="columnsSpinBox"/>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="layersGroupBox">
     <property name="title">
      <string>Layers</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QTableView" name="layersTableView">
        <property name="selectionMode">
         <enum>QAbstractItemView::SingleSelection</enum>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
        <attribute name="verticalHeaderVisible">
         <bool>false</bool>
        </attribute>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
